tests/success/call_dynamic_expression.bz
function test()
{
	({ 0; test })();
}
