tests/error/comptime/allocation1.bz
function test()
{
	(consteval {
		__builtin_comptime_malloc(int32, 1);
	});
}
